--- a/src/app/components/shared/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/components/shared/confirmation-dialog/confirmation-dialog.component.html
@@ -6,8 +6,8 @@
 
 
     <div mat-dialog-actions>
-        <button class=btn-cancel mat-raised-button color="warn" (click)="onDismiss()">No</button>
-        <button mat-raised-button color="primary" (click)="onConfirm()">Yes</button>
+        <button class="btn-cancel" mat-stroked-button color="warn" (click)="onDismiss()">No</button>
+        <button mat-stroked-button color="primary" (click)="onConfirm()">Yes</button>
     </div>
     
 </mat-card>
