--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+.heroe-card {
+    width: 50%;
+    margin: auto;
+  }
+  
+  @media (max-width: 800px) {
+    .heroe-card {
+      width: 90%;
+    }
+  }
+
 mat-dialog-container {
     padding: 0px !important;
 }
