--- a/src/app/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/components/confirmation-dialog/confirmation-dialog.component.html
@@ -7,7 +7,7 @@
 
     <div mat-dialog-actions>
         <button class="btn-cancel" mat-stroked-button color="warn" (click)="onDismiss()">No</button>
-        <button mat-stroked-button color="primary" (click)="onConfirm()">Yes</button>
+        <button mat-stroked-button color="primary" (click)="onConfirm()">Sí</button>
     </div>
     
 </mat-card>
