--- a/src/app/components/heroe-list/heroe-list.component.html
+++ b/src/app/components/heroe-list/heroe-list.component.html
@@ -1,17 +1,18 @@
 <div class="mat-elevation-z8 heroe-card">
 
-  <button (click)="onCreateHeroe()" class="btn-create-heroe" mat-raised-button color="primary" >Crear</button>
+  <button (click)="onCreateHeroe()" class="btn-create-heroe" mat-raised-button color="primary" >{{ "button.create" | translate }}</button>
   <mat-form-field>
     <mat-icon matPrefix>search</mat-icon>
-    <input (keyup.enter)="onSearchHeroe(heroeInpSearch.value)" #heroeInpSearch matInput type="search" placeholder="Nombre héroe" class="search-input">
+    <input (keyup.enter)="onSearchHeroe(heroeInpSearch.value)" #heroeInpSearch matInput type="search"
+        [placeholder]="'placeholder.heroe_name' | translate" class="search-input">
   </mat-form-field>
 
-   <button (click)="onSearchHeroe(heroeInpSearch.value)" mat-stroked-button>Buscar</button>
+   <button (click)="onSearchHeroe(heroeInpSearch.value)" mat-stroked-button>{{ "button.search" | translate }}</button>
 
 
 
   <div class="no-data" *ngIf="dataHeroesTable.data.length === 0">
-    Heroes no encontrados
+    {{ "table.heroes_not_found" | translate }}
   </div>
 
   <table *ngIf="dataHeroesTable.data.length > 0" mat-table [dataSource]="dataHeroesTable">
@@ -21,7 +22,7 @@
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th class="name" mat-header-cell *matHeaderCellDef> Heroes </th>
+      <th class="name" mat-header-cell *matHeaderCellDef> {{ "table.heroe" | translate }} </th>
       <td mat-cell *matCellDef="let heroe"> {{heroe.name}} </td>
     </ng-container>
 
@@ -29,7 +30,7 @@
     <ng-container matColumnDef="edit">
       <th class="name" mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let heroe" >
-        <mat-icon (click)="onEditHeroe(heroe)" aria-hidden="false" aria-label="Example home icon" matTooltip="Editar heroe">edit</mat-icon>
+        <mat-icon (click)="onEditHeroe(heroe)" aria-hidden="false" [matTooltip]="'tooltip.edit_hero' | translate">edit</mat-icon>
       </td>
     </ng-container>
 
@@ -37,7 +38,7 @@
     <ng-container matColumnDef="delete">
       <th style="width: 10px;" mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let heroe" >
-        <mat-icon (click)="onDeleteHeroe(heroe)" aria-hidden="false" aria-label="Example home icon" matTooltip="Eliminar heroe">delete</mat-icon>
+        <mat-icon (click)="onDeleteHeroe(heroe)" aria-hidden="false" [matTooltip]="'tooltip.remove_hero' | translate">delete</mat-icon>
       </td>
     </ng-container>
 
