--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,3 +1,3 @@
 <div class="nav">
-    <a class="active" [routerLink]="['/home']">Home</a>
+    <a class="active" [routerLink]="['/home']">{{ "menu.home" | translate }}</a>
 </div>
